fixing footer on mobile

--- a/style.css
+++ b/style.css
@@ -574,7 +574,6 @@ b {
   position: sticky;
   bottom: 50px;
   margin: 0 auto;
-  width: 75%;
   color: black;
   text-align: center;
 }
